# Graphics-Engine

./: .gitignore  CMakeLists.txt
Input/: test.txt
engine/: AssetManager.cpp  AssetManager.h  CMakeLists.txt  Cache.h  Cube.cpp  Cube.h  Engine.cpp  Engine.h  Main.cpp  RenderObj.cpp  RenderObj.h  Shader.cpp  Shader.h  Test.cpp  Test.h  Texture.cpp  Texture.h  VertexBuffer.cpp  VertexBuffer.h  VertexFormats.h  glad.c
include/glad/: glad.h
shaders/: simple.fs  simple.vs  simpleFS.glsl  simpleVS.glsl  texturedFS.glsl  texturedVS.glsl
